<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rgColors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:id="@+id/rbRed"
            android:text="@string/rbRed"
            android:textColor="@color/red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rbGreen"
            android:text="@string/rbGreen"
            android:textColor="@color/green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <RadioButton
            android:id="@+id/rbBlue"
            android:text="@string/rbBlue"
            android:textColor="@color/blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </RadioGroup>

    <Button
        android:id="@+id/btnSetPreferences"
        android:text="@string/btnPreferences"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgColors"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>