<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

        <EditText
            android:id="@+id/edtURL"
            android:text="@string/downloadURL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnDownload"
        android:text="@string/btnDownload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtURL"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/btnShowSalaries"
        android:text="@string/btnShowSalaries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnDownload"/>

    <Button
        android:id="@+id/btnSalariesToFile"
        android:text="@string/btnSalariesToFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnShowSalaries"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSalariesToFile">

        <TextView
            android:id="@+id/tvSalaries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </ScrollView>

</RelativeLayout>